test/good/arrays/method09.px

a = ['x']
b = a.copy()
a[0] = 'y'
print a, b
