test/bad/arrays/comprehension07.px

[x for x, y in 'a'..'b', 'c'..'d', 'e'..'f']
